tests/negative_tests/semantic_errors/bool_to_int_assign.c
// INVALID - Type Error: bool to int narrowing
int main() {
    int x;
    bool y;
    y = true;
    x = y;  // ERROR: bool to int is narrowing
    return x;
}
